--- a/src/css/header.css
+++ b/src/css/header.css
@@ -32,3 +32,13 @@
     font-size: 15px;
     letter-spacing: 1px;
 }
+
+.header__right {
+    display: flex;
+    align-items: center;
+}
+
+.header__right .MuiAvatar-root{
+    height: 30px;
+    width: 30px;
+}
