--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -12,3 +12,10 @@
     margin-left: 10px !important;
     max-width: 150px;
 }
+
+.sidebaroptions__heading {
+    font-size: 15px;
+    margin: 0;
+    margin-left: 25px;
+
+}
