--- a/src/css/emailList.css
+++ b/src/css/emailList.css
@@ -24,3 +24,44 @@
 .Emaillist__settingsRight p {
     font-size: 20px;
 }
+
+.emailtype {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid whitesmoke;
+}
+
+.emailtype > .emailtype__options {
+    display: flex;
+    align-items: center;
+    min-width: 230px;
+    padding: 0px 10px;
+    cursor: pointer;
+    border:  3px solid white;
+}
+
+.emailtype > .emailtype__options svg {
+    font-size: 20px;
+    color: gray;
+    margin-right: 10px;
+}
+
+.emailtype > .emailtype__options p {
+    font-size: 17px;
+
+}
+
+.emailtype > .emailtype__options:hover {
+    background-color: whitesmoke;
+}
+
+.emailtype__options--active{
+    border-bottom: 3px solid #d93020 !important;
+}
+
+.emailtype__options--active p,
+.emailtype__options--active svg
+{
+    color: #d93020 !important;
+    font-weight: bold !important;;
+}
