--- a/src/css/emailList.css
+++ b/src/css/emailList.css
@@ -126,3 +126,63 @@
 .emailbody > .emailbody__right p {
     font-size: 15px;
 }
+
+.emaildetails__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid whitesmoke;
+    padding: 0px 15px;
+}
+
+.emaildetails__header svg {
+    font-size: 18px;
+}
+
+.emaildetails__headerLeft {
+    display: flex;
+    align-items: center;
+}
+
+.emaildetails__middleheader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid whitesmoke;
+}
+
+.emaildetails__middleheader svg {
+    font-size: 18px;
+}
+
+.emaildetails__middleheaderLeft {
+    display: flex;
+    align-items: center;
+}
+
+.emaildetails__middleheaderLeft h4 {
+    margin-right: 10px;
+}
+
+.emaildetails__middleheaderLeft p {
+    font-size: 13px;
+}
+
+.emaildetails__middleheaderRight {
+    display: flex;
+    align-items: center;
+}
+
+.emaildetails__middleheaderRight p {
+    font-size: 13px;
+}
+
+.emaildetails_body {
+    display: flex;
+    padding: 0px 15px;
+}
+
+.emaildetails_message {
+    box-shadow: 0px 0px 3px #ccc;
+    height: 100%;
+}
